Add support for showing the previous song in `CurrentSongHudWidget` with new config options, UI adjustments, and backend updates.